--- a/ViewController/public_html/resources/css/QualityApp.css
+++ b/ViewController/public_html/resources/css/QualityApp.css
@@ -4,7 +4,7 @@
 .amx-panelPage-header{
     border-bottom-color: #86BC25; 
     background-color:#000000;
-    border-bottom-width: thin;
+    border-bottom-width: medium;
     border-bottom-style:solid;
 }
 
