--- a/ViewController/public_html/resources/css/QualityApp.css
+++ b/ViewController/public_html/resources/css/QualityApp.css
@@ -27,7 +27,9 @@
 	font-weight:bold;
     font-family:  'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-
+.ordAppStretchLyt .amx-panelStretchLayout_center {
+    overflow: auto;
+}
 /* Android Title bar styling end */
 
 /* Android Submit button styling */
