--- a/ViewController/public_html/resources/css/QualityApp.css
+++ b/ViewController/public_html/resources/css/QualityApp.css
@@ -1,6 +1,14 @@
 @charset "windows-1252";
 @import url('../font-awesome-4.6.3/css/font-awesome.css');
 
+@font-face {
+    font-family: RobotoMedium;
+    src: url("../fontRoboto/Roboto.Medium.ttf") format("truetype");
+}
+@font-face {
+    font-family: RobotoLight;
+    src: url("../fontRoboto/Roboto.Light.ttf") format("truetype");
+}
 .amx-panelPage-header{
     border-bottom-color: #86BC25; 
     background-color:#000000;
@@ -11,13 +19,13 @@
 .amx-panelPage-header .amx-outputText  {
     color: #86BC25;
     font-size: x-large; 
-    font-family: 'RobotoMedium';
+    font-family: RobotoMedium;
 }
 
 .headertextwhite{
     color: #ffffff !important;
     font-size: x-large; 
-    font-family:  'RobotoMedium';
+    font-family:  RobotoMedium;
 }
 
 .resulttext{
@@ -25,7 +33,7 @@
 	color: #000000;
 	font-size:small;
 	font-weight:bold;
-    font-family:  'RobotoLight';
+        font-family:  'RobotoLight';
 }
 .ordAppStretchLyt .amx-panelStretchLayout_center {
     overflow: auto;
@@ -38,7 +46,7 @@
     background: #86BC25;
     width: 250px;
     background-image: none;
-    font-family: 'RobotoMedium';
+    font-family: RobotoMedium;
     color: #ffffff;  
     height:30px;
     min-height:21px;
@@ -57,4 +65,58 @@
     src: url('../fontRoboto/Roboto-Medium.ttf?v=1.100141') format('truetype');
   font-weight: normal;
   font-style: normal;    
+}
+
+
+html[dir=ltr] .amx-selectOneChoice .selectItemsContainer {
+    border-width:2px;
+    border-radius: 1px;
+    border-style: inset;
+    -webkit-border-image: none;
+    border-image: none;
+    position: static;
+    height: 30px;
+    background-image: url("../images/DownArrow.png");
+    background-repeat: no-repeat;
+    background-position: 98%;
+}
+
+HTML[dir="ltr"] .amx-inputDate-trigger-dateTime{
+    border-width: 2px;
+    border: #1C75BC;
+    border-radius: 5px;
+    border-style: solid;
+    -webkit-border-image: none;
+    border-image: none;
+    position: static;
+    height: 40px;
+    background-image: url("../images/Date.png");
+    background-repeat: no-repeat;
+    background-position: 98%;
+}
+
+HTML[dir="ltr"] .amx-inputDate-text {
+    padding-left: 6px;
+    padding-right: 20px;
+    padding-top: 8px;
+    position: relative;
+} 
+
+.amx-listItem.sprigboardListItem {
+    padding: 0px !important;
+    border: 0px;
+    height: 35px !important;
+    min-height: 0px !important;
+}
+
+.sprigboardListItem.amx-listItem.amx-listItem-selected, .sprigboardListItem.amx-listItem:active {
+    background-color: transparent;
+    border: 0px;
+    margin: 0px;
+}
+
+
+.amx-outputText  {
+    font-size: x-large; 
+    font-family: RobotoMedium;
 }
