--- a/ViewController/public_html/resources/css/QualityApp.css
+++ b/ViewController/public_html/resources/css/QualityApp.css
@@ -1,75 +1,85 @@
 @charset "windows-1252";
+
 @import url('../font-awesome-4.6.3/css/font-awesome.css');
 
 @font-face {
     font-family: RobotoMedium;
-    src: url("../fontRoboto/Roboto.Medium.ttf") format("truetype");
-}
-@font-face {
-    font-family: RobotoLight;
-    src: url("../fontRoboto/Roboto.Light.ttf") format("truetype");
-}
-.amx-panelPage-header{
-    border-bottom-color: #86BC25; 
-    background-color:#000000;
-    border-bottom-width: medium;
-    border-bottom-style:solid;
+    src: url("../fontRoboto/Roboto.Medium.ttf")format("truetype");
 }
 
-.amx-panelPage-header .amx-outputText  {
+@font-face {
+    font-family: RobotoLight;
+    src: url("../fontRoboto/Roboto.Light.ttf")format("truetype");
+}
+@font-face {
+    font-family: RobotoRegular;
+    src: url("../fontRoboto/Roboto-Regular.ttf")format("truetype");
+}
+@font-face {
+    font-family: RobotoThin;
+    src: url("../fontRoboto/Roboto-Thin.ttf")format("truetype");
+}
+.amx-panelPage-header {
+    border-bottom-color: #86BC25;
+    background-color: #000000;
+    border-bottom-width: medium;
+    border-bottom-style: solid;
+}
+
+.amx-panelPage-header .amx-outputText {
     color: #86BC25;
-    font-size: x-large; 
+    font-size: x-large;
     font-family: RobotoMedium;
 }
 
-.headertextwhite{
+.headertextwhite {
     color: #ffffff !important;
-    font-size: x-large; 
-    font-family:  RobotoMedium;
+    font-size: x-large;
+    font-family: RobotoMedium;
 }
 
-.resulttext{
-	width:auto;
-	color: #000000;
-	font-size:small;
-	font-weight:bold;
-        font-family:  'RobotoLight';
+.resulttext {
+    width: auto;
+    color: grey;
+    font-size: 5px;
+    font-family: RobotoLight;
+    font-weight: bold;
 }
+
 .ordAppStretchLyt .amx-panelStretchLayout_center {
     overflow: auto;
 }
 /* Android Title bar styling end */
-
 /* Android Submit button styling */
-.amx-commandButton{   
-    border: 0;  
+.amx-commandButton {
+    border: 0;
     background: #86BC25;
     width: 250px;
     background-image: none;
     font-family: RobotoMedium;
-    color: #ffffff;  
-    height:30px;
-    min-height:21px;
-    font-size: larger; 
-    text-align: center; 
-    font-stretch: expanded; 
+    color: #ffffff;
+    height: 30px;
+    min-height: 21px;
+    font-size: larger;
+    text-align: center;
+    font-stretch: expanded;
 }
 @font-face {
-    font-family: 'RobotoLight';
-    src: url('../fontRoboto/Roboto-Light.ttf?v=1.100141') format('truetype');
-  font-weight: normal;
-  font-style: normal;    
-}
-@font-face {
-    font-family: 'RobotoMedium';
-    src: url('../fontRoboto/Roboto-Medium.ttf?v=1.100141') format('truetype');
-  font-weight: normal;
-  font-style: normal;    
+    font-family: RobotoLight;
+    src: url('../fontRoboto/Roboto-Light.ttf?v=1.100141')format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
+@font-face {
+    font-family: RobotoMedium;
+    src: url('../fontRoboto/Roboto-Medium.ttf?v=1.100141')format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 html[dir=ltr] .amx-selectOneChoice .selectItemsContainer {
-    border-width:2px;
+    border-width: 2px;
     border-radius: 1px;
     border-style: inset;
     -webkit-border-image: none;
@@ -79,28 +89,32 @@ html[dir=ltr] .amx-selectOneChoice .selectItemsContainer {
     background-image: url("../images/DownArrow.png");
     background-repeat: no-repeat;
     background-position: 98%;
+    font-family: RobotoMedium;
+    background-color: White;
 }
 
-HTML[dir="ltr"] .amx-inputDate-trigger-dateTime{
+HTML[dir="ltr"] .amx-inputDate-trigger-dateTime {
     border-width: 2px;
-    border: #1C75BC;
     border-radius: 5px;
-    border-style: solid;
+    border-style: inset;
+    border: #1C75BC !important;
     -webkit-border-image: none;
     border-image: none;
     position: static;
-    height: 40px;
+    height: 30px;
     background-image: url("../images/Date.png");
     background-repeat: no-repeat;
     background-position: 98%;
+    background-color: White;
 }
 
 HTML[dir="ltr"] .amx-inputDate-text {
     padding-left: 6px;
     padding-right: 20px;
-    padding-top: 8px;
+    padding-top: 4px;
     position: relative;
-} 
+    font-family: RobotoMedium;
+}
 
 .amx-listItem.sprigboardListItem {
     padding: 0px !important;
@@ -115,8 +129,38 @@ HTML[dir="ltr"] .amx-inputDate-text {
     margin: 0px;
 }
 
+.reportListItem.amx-listItem.amx-listItem-selected, .reportListItem.amx-listItem:active {
+    background-color: #1C75BC;
+}
 
-.amx-outputText  {
-    font-size: x-large; 
+html[dir=ltr] .amx-inputText {
+    border-width: 2px;
+    border-radius: 5px;
+    border-style: solid;
+    border: grey;
+    -webkit-border-image: none;
+    border-image: none;
+    position: static;
+    border-color: #1C75BC;
+}
+
+.xxRobotoMedium14 {
     font-family: RobotoMedium;
+    font-size: 14px;
+}
+
+.xxRobotoLight14 {
+    font-family: RobotoLight;
+    font-size: 14px;
+}
+
+.xxRobotoMediumL {
+    font-family: RobotoMedium;
+    font-size: large;
+}
+
+.xxRobotoMediumM {
+    font-family: RobotoMedium;
+    font-weight: bold;
+    font-size: medium;
 }
