--- a/ViewController/public_html/resources/css/QualityApp.css
+++ b/ViewController/public_html/resources/css/QualityApp.css
@@ -35,7 +35,7 @@
 .headertextwhite {
     color: #ffffff !important;
     font-size: x-large;
-    font-family: RobotoMedium;
+    font-family: RobotoLight;
 }
 
 .resulttext {
@@ -81,7 +81,7 @@
 html[dir=ltr] .amx-selectOneChoice .selectItemsContainer {
     border-width: 2px;
     border-radius: 1px;
-    border-style: inset;
+    border-style: solid;
     -webkit-border-image: none;
     border-image: none;
     position: static;
@@ -93,11 +93,11 @@ html[dir=ltr] .amx-selectOneChoice .selectItemsContainer {
     background-color: White;
 }
 
-HTML[dir="ltr"] .amx-inputDate-trigger-dateTime {
+html[dir="ltr"] .amx-inputDate-trigger-dateTime {
     border-width: 2px;
-    border-radius: 5px;
-    border-style: inset;
-    border: #1C75BC !important;
+    border: rgb(169,169,169);
+    border-radius: 1px;
+    border-style: solid;
     -webkit-border-image: none;
     border-image: none;
     position: static;
@@ -108,7 +108,7 @@ HTML[dir="ltr"] .amx-inputDate-trigger-dateTime {
     background-color: White;
 }
 
-HTML[dir="ltr"] .amx-inputDate-text {
+html[dir="ltr"] .amx-inputDate-text {
     padding-left: 6px;
     padding-right: 20px;
     padding-top: 4px;
