--- a/ViewController/public_html/resources/css/QualityApp.css
+++ b/ViewController/public_html/resources/css/QualityApp.css
@@ -98,6 +98,12 @@
     color: #999999 !important;
 }
 
+.errorMessage{
+    font-family: RobotoRegular !important;
+    font-size: small !important;
+    color: red !important;
+}
+
 .xxRobotoGroupHeader {
     font-family: RobotoMedium !important;
     font-size: x-large !important;
